--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "sass": "^1.69.3"
+    "sass": "^1.69.3",
+    "use-shopping-cart": "^3.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
